--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <div class="w-12 h-12 bg-gradient-to-br from-blue-600 to-purple-600 rounded-xl flex items-center justify-center shadow-lg">
                             <i data-lucide="zap" class="w-7 h-7 text-white"></i>
                         </div>
-                        <span class="text-2xl font-bold bg-gradient-to-r from-blue-600 to-purple-600 bg-clip-text text-transparent">WorkflowApps.ai</span>
+                        <span class="text-2xl font-bold bg-gradient-to-r from-blue-600 to-purple-600 bg-clip-text text-transparent">WorkflowApp</span>
                     </div>
                     <h1 class="text-5xl lg:text-7xl font-bold leading-tight">
                         <span class="bg-gradient-to-r from-slate-900 via-blue-900 to-indigo-900 bg-clip-text text-transparent">Experts in <span class="bg-gradient-to-r from-green-500 to-cyan-500 bg-clip-text text-transparent">monday.com</span></span>
@@ -36,7 +36,7 @@
                         <br>
                         <span class="bg-gradient-to-r from-slate-700 to-slate-900 bg-clip-text text-transparent">& API Integration</span>
                     </h1>
-                    <p class="text-xl lg:text-2xl text-slate-600 max-w-4xl mx-auto leading-relaxed">WorkflowApps helps organizations securely integrate AI into sensitive workflows — bringing predictability, scalability, and control to advanced automation.</p>
+                    <p class="text-xl lg:text-2xl text-slate-600 max-w-4xl mx-auto leading-relaxed">WorkflowApp helps organizations securely integrate AI into sensitive workflows — bringing predictability, scalability, and control to advanced automation.</p>
                     <div class="flex flex-col sm:flex-row gap-4 justify-center mt-12">
                         <button @click="scrollToConsultation" class="bg-gradient-to-r from-blue-600 to-purple-600 hover:from-blue-700 hover:to-purple-700 text-white px-8 py-4 text-lg rounded-xl shadow-lg hover:shadow-xl transition-all duration-300 transform hover:scale-105 flex items-center">
                             Schedule Free Consultation <i data-lucide="arrow-right" class="w-5 h-5 ml-2"></i>
@@ -75,7 +75,7 @@
             <div class="absolute top-0 left-0 w-full h-full bg-grid"></div>
             <div class="relative max-w-5xl mx-auto px-6 text-center">
                 <div class="bg-white/10 backdrop-blur-lg rounded-3xl p-12 lg:p-16 shadow-2xl border border-white/20">
-                    <h2 class="text-4xl lg:text-5xl font-bold text-white mb-8 leading-tight">SCHEDULE YOUR FREE CONSULTATION WITH A WORKFLOWAPPS EXPERT</h2>
+                    <h2 class="text-4xl lg:text-5xl font-bold text-white mb-8 leading-tight">SCHEDULE YOUR FREE CONSULTATION WITH A WORKFLOWAPP EXPERT</h2>
                     <p class="text-xl text-blue-100 mb-12 max-w-3xl mx-auto leading-relaxed">We will focus on understanding your business and use cases along with the pain points. This will allow us to bring the relevant experts to assist with your goals.</p>
                     <div class="flex flex-col sm:flex-row gap-6 justify-center">
                         <button class="bg-white text-blue-700 hover:bg-blue-50 px-10 py-4 text-lg rounded-xl shadow-lg hover:shadow-xl transition-all duration-300 transform hover:scale-105 font-semibold flex items-center">
@@ -99,7 +99,7 @@
                     <h2 class="text-4xl lg:text-5xl font-bold text-slate-900 mb-8">About Us</h2>
                 </div>
                 <div class="bg-white rounded-3xl p-12 lg:p-16 shadow-xl">
-                    <p class="text-xl text-slate-700 leading-relaxed">At WorkflowApps, we engineer secure and scalable AI and API solutions that serve as the foundation for modern, intelligent business systems. From custom API gateways to AI-powered orchestration layers, we help organizations integrate critical platforms and bring structure to complex workflows. We also design custom user interfaces that align with your workflows — delivering intuitive, efficient experiences built on a solid integration foundation.</p>
+                    <p class="text-xl text-slate-700 leading-relaxed">At WorkflowApp, we engineer secure and scalable AI and API solutions that serve as the foundation for modern, intelligent business systems. From custom API gateways to AI-powered orchestration layers, we help organizations integrate critical platforms and bring structure to complex workflows. We also design custom user interfaces that align with your workflows — delivering intuitive, efficient experiences built on a solid integration foundation.</p>
                 </div>
             </div>
         </section>
@@ -112,7 +112,7 @@
                         <div class="w-10 h-10 bg-gradient-to-br from-blue-500 to-purple-600 rounded-lg flex items-center justify-center">
                             <i data-lucide="zap" class="w-6 h-6 text-white"></i>
                         </div>
-                        <span class="text-xl font-bold text-white">WorkflowApps.ai</span>
+                        <span class="text-xl font-bold text-white">WorkflowApp</span>
                     </div>
                     <div class="flex gap-8 text-slate-300">
                         <a href="#" class="hover:text-white transition-colors duration-300">Terms & Conditions</a>
@@ -120,7 +120,7 @@
                     </div>
                 </div>
                 <div class="border-t border-slate-800 mt-8 pt-8 text-center text-slate-400">
-                    <p>&copy; 2024 WorkflowApps.ai. All rights reserved.</p>
+                    <p>&copy; 2024 WorkflowApp. All rights reserved.</p>
                 </div>
             </div>
         </footer>
