--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     </div>
                     <div class="flex gap-8 text-slate-300">
                         <a href="#" class="hover:text-white transition-colors duration-300">Terms & Conditions</a>
-                        <a href="#" class="hover:text-white transition-colors duration-300">Privacy Policy</a>
+                        <a href="privacy-policy.html" class="hover:text-white transition-colors duration-300">Privacy Policy</a>
                     </div>
                 </div>
                 <div class="border-t border-slate-800 mt-8 pt-8 text-center text-slate-400">
