Update links for Terms of Service in index.html and privacy-policy.html

--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - WorkflowApp</title>
+    <title>Terms of Service - WorkflowApp</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
@@ -28,8 +28,8 @@
                     </a>
                     <nav class="hidden md:flex items-center gap-8">
                         <a href="index.html" class="text-slate-600 hover:text-blue-600 transition-colors duration-300">Home</a>
-                        <a href="privacy-policy.html" class="text-blue-600 font-semibold">Privacy Policy</a>
-                        <a href="terms-of-service.html" class="text-slate-600 hover:text-blue-600 transition-colors duration-300">Terms of Service</a>
+                        <a href="privacy-policy.html" class="text-slate-600 hover:text-blue-600 transition-colors duration-300">Privacy Policy</a>
+                        <a href="terms-of-service.html" class="text-blue-600 font-semibold">Terms of Service</a>
                     </nav>
                 </div>
             </div>
@@ -43,105 +43,97 @@
             <div class="relative max-w-4xl mx-auto px-6 text-center">
                 <div class="inline-flex items-center gap-3 mb-8">
                     <div class="w-16 h-16 bg-gradient-to-br from-blue-600 to-purple-600 rounded-xl flex items-center justify-center shadow-lg">
-                        <i data-lucide="shield" class="w-8 h-8 text-white"></i>
+                        <i data-lucide="file-text" class="w-8 h-8 text-white"></i>
                     </div>
                 </div>
                 <h1 class="text-4xl lg:text-6xl font-bold leading-tight mb-6">
-                    <span class="bg-gradient-to-r from-slate-900 via-blue-900 to-indigo-900 bg-clip-text text-transparent">Privacy Policy</span>
+                    <span class="bg-gradient-to-r from-slate-900 via-blue-900 to-indigo-900 bg-clip-text text-transparent">Terms of Service</span>
                 </h1>
                 <p class="text-xl text-slate-600 max-w-2xl mx-auto">Last updated: June 24, 2025</p>
             </div>
         </section>
 
-        <!-- Privacy Policy Content -->
+        <!-- Terms of Service Content -->
         <section class="py-20 lg:py-32 bg-white/60 backdrop-blur-sm">
             <div class="max-w-4xl mx-auto px-6">
                 <div class="bg-white rounded-3xl p-8 lg:p-12 shadow-xl">
                     <div class="prose prose-lg max-w-none">
                         <div class="space-y-8">
+                            <!-- Introduction -->
+                            <div class="border-b border-slate-200 pb-6">
+                                <p class="text-slate-700 leading-relaxed">Welcome to WorkflowApp.live. These Terms of Service ("Terms") govern your use of our website and any software applications we provide, including apps available on the monday.com marketplace such as "Make Pro" (collectively, the "Services"). By using our Services, you agree to these Terms.</p>
+                            </div>
+
                             <!-- Section 1 -->
                             <div class="border-b border-slate-200 pb-6">
                                 <h2 class="text-2xl font-bold text-slate-900 mb-4">1. Who We Are</h2>
-                                <p class="text-slate-700 leading-relaxed">WorkflowApp.live ("we", "us", or "our") develops and offers third-party applications for monday.com, including the "Make Pro" app, as well as related professional services. We are not affiliated with or endorsed by monday.com.</p>
+                                <p class="text-slate-700 leading-relaxed">WorkflowApp.live is an independent service provider. We are not affiliated with monday.com.</p>
                             </div>
 
                             <!-- Section 2 -->
                             <div class="border-b border-slate-200 pb-6">
-                                <h2 class="text-2xl font-bold text-slate-900 mb-4">2. What This Policy Covers</h2>
-                                <p class="text-slate-700 leading-relaxed">This policy outlines how we handle personal information you may provide when using our website or apps. By using our Services, you consent to the practices described here.</p>
+                                <h2 class="text-2xl font-bold text-slate-900 mb-4">2. Use of Services</h2>
+                                <p class="text-slate-700 leading-relaxed mb-4">You may use our Services for your internal business use only. You may not:</p>
+                                <ul class="list-disc list-inside text-slate-700 space-y-2 ml-4">
+                                    <li>Reverse engineer, resell, or redistribute our Services</li>
+                                    <li>Use our Services for illegal or harmful purposes</li>
+                                    <li>Upload content you don't have the rights to share</li>
+                                </ul>
+                                <p class="text-slate-700 leading-relaxed mt-4">You are responsible for the content you upload and for complying with all applicable laws.</p>
                             </div>
 
                             <!-- Section 3 -->
                             <div class="border-b border-slate-200 pb-6">
-                                <h2 class="text-2xl font-bold text-slate-900 mb-4">3. Information We Collect</h2>
-                                <p class="text-slate-700 leading-relaxed mb-4">We may collect basic information such as:</p>
-                                <ul class="list-disc list-inside text-slate-700 space-y-2 ml-4">
-                                    <li>Your name and email (e.g., when you contact us or install our app)</li>
-                                    <li>Configuration data required to make the app function</li>
-                                    <li>Technical data such as IP address, device type, or usage behavior via cookies or analytics tools</li>
-                                </ul>
-                                <p class="text-slate-700 leading-relaxed mt-4">We do not intentionally collect or store personal content shared through monday.com. Any data uploaded via monday.com is subject to their own policies.</p>
+                                <h2 class="text-2xl font-bold text-slate-900 mb-4">3. Customer Data</h2>
+                                <p class="text-slate-700 leading-relaxed">We do not store any data beyond basic configuration settings required to operate the Service. All other data remains within monday.com. You are responsible for the legality and accuracy of any data you submit through our apps.</p>
                             </div>
 
                             <!-- Section 4 -->
                             <div class="border-b border-slate-200 pb-6">
-                                <h2 class="text-2xl font-bold text-slate-900 mb-4">4. How We Use Your Information</h2>
-                                <p class="text-slate-700 leading-relaxed mb-4">We use the information solely for:</p>
-                                <ul class="list-disc list-inside text-slate-700 space-y-2 ml-4">
-                                    <li>Operating and improving our Services</li>
-                                    <li>Providing support upon request</li>
-                                    <li>Responding to your inquiries</li>
-                                    <li>Sending updates or announcements, if applicable</li>
-                                </ul>
-                                <p class="text-slate-700 leading-relaxed mt-4">We do not sell or rent your personal data.</p>
+                                <h2 class="text-2xl font-bold text-slate-900 mb-4">4. Fees</h2>
+                                <p class="text-slate-700 leading-relaxed">Some Services are free. Paid apps require a valid subscription via monday.com. All billing and refund terms are handled by monday.com, not by us.</p>
                             </div>
 
                             <!-- Section 5 -->
                             <div class="border-b border-slate-200 pb-6">
-                                <h2 class="text-2xl font-bold text-slate-900 mb-4">5. User Responsibility</h2>
-                                <p class="text-slate-700 leading-relaxed mb-4">You are solely responsible for:</p>
-                                <ul class="list-disc list-inside text-slate-700 space-y-2 ml-4">
-                                    <li>Any data you choose to upload or share</li>
-                                    <li>Obtaining any necessary permissions from others whose data you include</li>
-                                    <li>Complying with your own legal obligations when using our Services</li>
-                                </ul>
-                                <p class="text-slate-700 leading-relaxed mt-4">We are not liable for any data you share via monday.com or third-party platforms.</p>
+                                <h2 class="text-2xl font-bold text-slate-900 mb-4">5. Disclaimer of Warranty</h2>
+                                <p class="text-slate-700 leading-relaxed">Our Services are provided "as is". We do not guarantee uninterrupted availability or compatibility. Use of the Services is at your own risk.</p>
                             </div>
 
                             <!-- Section 6 -->
                             <div class="border-b border-slate-200 pb-6">
-                                <h2 class="text-2xl font-bold text-slate-900 mb-4">6. Third-Party Services</h2>
-                                <p class="text-slate-700 leading-relaxed">Our Services may rely on platforms like monday.com and analytics tools (e.g., Google Analytics or Mixpanel). These platforms may process your data under their own privacy terms. We are not responsible for their practices.</p>
+                                <h2 class="text-2xl font-bold text-slate-900 mb-4">6. Limitation of Liability</h2>
+                                <p class="text-slate-700 leading-relaxed">To the extent permitted by law, we are not liable for any direct or indirect damages arising from your use of our Services. In any case, our total liability will not exceed the amount you paid us in the 6 months before the issue arose.</p>
                             </div>
 
                             <!-- Section 7 -->
                             <div class="border-b border-slate-200 pb-6">
-                                <h2 class="text-2xl font-bold text-slate-900 mb-4">7. Data Retention & Deletion</h2>
-                                <p class="text-slate-700 leading-relaxed">We retain only the minimal data needed to provide our services. If you uninstall our apps or stop using our services, any associated data will be deleted within a reasonable timeframe, unless we're required to retain it by law.</p>
+                                <h2 class="text-2xl font-bold text-slate-900 mb-4">7. Termination</h2>
+                                <p class="text-slate-700 leading-relaxed">We may suspend or terminate access to our Services at any time if you breach these Terms. You may stop using our Services at any time.</p>
                             </div>
 
                             <!-- Section 8 -->
                             <div class="border-b border-slate-200 pb-6">
-                                <h2 class="text-2xl font-bold text-slate-900 mb-4">8. Data Security</h2>
-                                <p class="text-slate-700 leading-relaxed">We take reasonable technical and organizational measures to secure your data. However, no system is completely secure, and we cannot guarantee absolute protection.</p>
+                                <h2 class="text-2xl font-bold text-slate-900 mb-4">8. Intellectual Property</h2>
+                                <p class="text-slate-700 leading-relaxed">All intellectual property rights in the Services remain with us. These Terms do not grant you ownership of any part of the Services.</p>
                             </div>
 
                             <!-- Section 9 -->
                             <div class="border-b border-slate-200 pb-6">
-                                <h2 class="text-2xl font-bold text-slate-900 mb-4">9. Your Rights</h2>
-                                <p class="text-slate-700 leading-relaxed">Depending on your location, you may have rights to access, correct, or delete your personal data. To make a request, contact us at support@workflowapp.live. We may ask you to verify your identity.</p>
+                                <h2 class="text-2xl font-bold text-slate-900 mb-4">9. Privacy</h2>
+                                <p class="text-slate-700 leading-relaxed">We respect your privacy. See our <a href="privacy-policy.html" class="text-blue-600 hover:text-blue-700 underline">Privacy Policy</a> for details on how we handle personal information.</p>
                             </div>
 
                             <!-- Section 10 -->
                             <div class="border-b border-slate-200 pb-6">
-                                <h2 class="text-2xl font-bold text-slate-900 mb-4">10. Changes to This Policy</h2>
-                                <p class="text-slate-700 leading-relaxed">We may update this Privacy Policy from time to time. Changes will be posted on this page with an updated revision date.</p>
+                                <h2 class="text-2xl font-bold text-slate-900 mb-4">10. Governing Law</h2>
+                                <p class="text-slate-700 leading-relaxed">These Terms are governed by the laws of the State of Israel. Any disputes will be handled exclusively in the courts of Tel Aviv.</p>
                             </div>
 
                             <!-- Contact Section -->
                             <div class="pt-6">
-                                <h2 class="text-2xl font-bold text-slate-900 mb-4">Contact</h2>
-                                <p class="text-slate-700 leading-relaxed mb-4">If you have questions or concerns, contact:</p>
+                                <h2 class="text-2xl font-bold text-slate-900 mb-4">11. Contact</h2>
+                                <p class="text-slate-700 leading-relaxed mb-4">If you have any questions, contact:</p>
                                 <div class="bg-blue-50 rounded-xl p-6 border border-blue-200">
                                     <div class="flex items-center gap-3">
                                         <i data-lucide="mail" class="w-5 h-5 text-blue-600"></i>
@@ -166,8 +158,8 @@
                         <span class="text-xl font-bold text-white">WorkflowApp</span>
                     </div>
                     <div class="flex gap-8 text-slate-300">
-                        <a href="terms-of-service.html" class="hover:text-white transition-colors duration-300">Terms of Service</a>
-                        <a href="privacy-policy.html" class="text-white font-semibold">Privacy Policy</a>
+                        <a href="terms-of-service.html" class="text-white font-semibold">Terms of Service</a>
+                        <a href="privacy-policy.html" class="hover:text-white transition-colors duration-300">Privacy Policy</a>
                     </div>
                 </div>
                 <div class="border-t border-slate-800 mt-8 pt-8 text-center text-slate-400">
