--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <span class="text-xl font-bold text-white">WorkflowApp</span>
                     </div>
                     <div class="flex gap-8 text-slate-300">
-                        <a href="#" class="hover:text-white transition-colors duration-300">Terms & Conditions</a>
+                        <a href="terms-of-service.html" class="hover:text-white transition-colors duration-300">Terms of Service</a>
                         <a href="privacy-policy.html" class="hover:text-white transition-colors duration-300">Privacy Policy</a>
                     </div>
                 </div>
